--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root">Not Rendered</div>
+    <div id="root"><h1>Umair is here!</h1></div>
 
     <script type="module" src="App.js"></script>
   </body>
