--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <div id="root"><h1>Umair is here!</h1></div>
 
-    <script type="module" src="App.js"></script>
+    <script type="module" src="./src/App.jsx"></script>
   </body>
 </html>
